fixes some broken layouts and styles

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -67,6 +67,10 @@ img {
   width: 500px;
 }
 
+.avatar {
+  border: 1px solid darken($card-bg, 5);
+}
+
 .bg-success, .bg-danger {
   text-align: center;
   padding: 10px 20px 20px 10px;
@@ -78,6 +82,7 @@ img {
   border: 1px solid darken($card-bg, 5);
   box-shadow: 3px 3px 5px grey;
   margin-top: 50px !important;
+  padding: 30px 0px 40px 0px
 }
 
 .field {
